--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require": {
 	"php": ">=8.1",
         "twig/twig": "^3.3",
-        "envms/fluentpdo": "^2.2"
+        "envms/fluentpdo": "^2.2",
+      "ext-pdo": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
