--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
 	"php": ">=8.1",
         "twig/twig": "^3.3",
         "envms/fluentpdo": "^2.2",
-      "ext-pdo": "*"
+      "ext-pdo": "*",
+        "phpmetrics/phpmetrics": "^2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
